Replace solution of a3920be with a style override so light/dark mode settings don't interfere with how the notification looks. I will keep this until Foundry adjusts the currently-fixed light mode for the chat sidebar.

--- a/styles/css/init.css
+++ b/styles/css/init.css
@@ -171,6 +171,12 @@
   color: #eee;
   padding: 10px;
 }
+.fvtt-party-resources-chat-notification table tr {
+  background-color: #434857;
+}
+.fvtt-party-resources-chat-notification table tr:first-of-type td {
+  background-color: #252830;
+}
 .fvtt-party-resources-chat-notification table tr td {
   font-size: 16px;
   width: 50%;
