--- a/styles/scss/resource_notifications.scss
+++ b/styles/scss/resource_notifications.scss
@@ -3,18 +3,28 @@
   color: #eee;
   padding: 10px;
 
-  table tr td {
-    font-size: 16px;
-    width: 50%;
+  table {
+    tr {
+      background-color: #434857;
 
-    &:nth-child(2) {
-      font-weight: 700;
-      text-align: center;
+      &:first-of-type {
+        td { background-color: #252830; }
+      }
+
+      td {
+        font-size: 16px;
+        width: 50%;
+
+        &:nth-child(2) {
+          font-weight: 700;
+          text-align: center;
+        }
+
+        .small { font-size: 12px }
+        .green { color: green; }
+        .red { color: red; }
+      }
     }
-
-    .small { font-size: 12px }
-    .green { color: green; }
-    .red { color: red; }
   }
 }
 
